@@ -44,6 +44,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Collection
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|HashMap
 import|;
 end_import
@@ -231,6 +241,34 @@ operator|.
 name|index
 operator|.
 name|SortedSetDocValues
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|Accountable
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|Accountables
 import|;
 end_import
 
@@ -587,6 +625,98 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+comment|/**    * Return the memory usage of this object in bytes. Negative values are illegal.    */
+annotation|@
+name|Override
+DECL|method|ramBytesUsed
+specifier|public
+name|long
+name|ramBytesUsed
+parameter_list|()
+block|{
+synchronized|synchronized
+init|(
+name|cachedOrdMaps
+init|)
+block|{
+name|long
+name|bytes
+init|=
+literal|0
+decl_stmt|;
+for|for
+control|(
+name|OrdinalMap
+name|map
+range|:
+name|cachedOrdMaps
+operator|.
+name|values
+argument_list|()
+control|)
+block|{
+name|bytes
+operator|+=
+name|map
+operator|.
+name|ramBytesUsed
+argument_list|()
+expr_stmt|;
+block|}
+return|return
+name|bytes
+return|;
+block|}
+block|}
+comment|/**    * Returns nested resources of this class.     * The result should be a point-in-time snapshot (to avoid race conditions).    * @see Accountables    */
+annotation|@
+name|Override
+DECL|method|getChildResources
+specifier|public
+name|Collection
+argument_list|<
+name|Accountable
+argument_list|>
+name|getChildResources
+parameter_list|()
+block|{
+synchronized|synchronized
+init|(
+name|cachedOrdMaps
+init|)
+block|{
+return|return
+name|Accountables
+operator|.
+name|namedAccountables
+argument_list|(
+literal|"DefaultSortedSetDocValuesReaderState"
+argument_list|,
+name|cachedOrdMaps
+argument_list|)
+return|;
+block|}
+block|}
+annotation|@
+name|Override
+DECL|method|toString
+specifier|public
+name|String
+name|toString
+parameter_list|()
+block|{
+return|return
+literal|"DefaultSortedSetDocValuesReaderState(field="
+operator|+
+name|field
+operator|+
+literal|" origReader="
+operator|+
+name|origReader
+operator|+
+literal|")"
+return|;
+block|}
 comment|/** Return top-level doc values. */
 annotation|@
 name|Override
@@ -604,6 +734,9 @@ name|map
 init|=
 literal|null
 decl_stmt|;
+comment|// TODO: why are we lazy about this?  It's better if ctor pays the cost, not first query?  Oh, but we
+comment|// call this method from ctor, ok.  Also, we only ever store one entry in the map (for key=field) so
+comment|// why are we using a map?
 synchronized|synchronized
 init|(
 name|cachedOrdMaps
