@@ -66,6 +66,20 @@ name|SortedSetDocValues
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|Accountable
+import|;
+end_import
+
 begin_comment
 comment|/** Wraps a {@link IndexReader} and resolves ords  *  using existing {@link SortedSetDocValues} APIs without a  *  separate taxonomy index.  This only supports flat facets  *  (dimension + label), and it makes faceting a bit  *  slower, adds some cost at reopen time, but avoids  *  managing the separate taxonomy index.  It also requires  *  less RAM than the taxonomy index, as it manages the flat  *  (2-level) hierarchy more efficiently.  In addition, the  *  tie-break during faceting is now meaningful (in label  *  sorted order).  *  *<p><b>NOTE</b>: creating an instance of this class is  *  somewhat costly, as it computes per-segment ordinal maps,  *  so you should create it once and re-use that one instance  *  for a given {@link IndexReader}. */
 end_comment
@@ -76,6 +90,8 @@ specifier|public
 specifier|abstract
 class|class
 name|SortedSetDocValuesReaderState
+implements|implements
+name|Accountable
 block|{
 comment|/** Holds start/end range of ords, which maps to one    *  dimension (someday we may generalize it to map to    *  hierarchies within one dimension). */
 DECL|class|OrdRange
