@@ -44,6 +44,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Collection
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|HashMap
 import|;
 end_import
@@ -303,6 +313,20 @@ operator|.
 name|store
 operator|.
 name|Directory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|Accountable
 import|;
 end_import
 
@@ -1168,6 +1192,103 @@ name|toString
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|Collection
+argument_list|<
+name|Accountable
+argument_list|>
+name|resources
+init|=
+name|state
+operator|.
+name|getChildResources
+argument_list|()
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|state
+operator|.
+name|toString
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+name|FacetsConfig
+operator|.
+name|DEFAULT_INDEX_FIELD_NAME
+argument_list|)
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|searcher
+operator|.
+name|getIndexReader
+argument_list|()
+operator|.
+name|leaves
+argument_list|()
+operator|.
+name|size
+argument_list|()
+operator|>
+literal|1
+condition|)
+block|{
+name|assertTrue
+argument_list|(
+name|state
+operator|.
+name|ramBytesUsed
+argument_list|()
+operator|>
+literal|0
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|resources
+operator|.
+name|isEmpty
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|resources
+operator|.
+name|toString
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+name|FacetsConfig
+operator|.
+name|DEFAULT_INDEX_FIELD_NAME
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|state
+operator|.
+name|ramBytesUsed
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|resources
+operator|.
+name|isEmpty
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 name|searcher
 operator|.
 name|getIndexReader
